bin/sh/parser.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: parser.c,v 1.158 2018/12/09 17:33:38 christos Exp $	*/
+/*	$NetBSD: parser.c,v 1.159 2018/12/11 13:31:20 kre Exp $	*/
 
 /*-
  * Copyright (c) 1991, 1993
@@ -37,7 +37,7 @@
 #if 0
 static char sccsid[] = "@(#)parser.c	8.7 (Berkeley) 5/16/95";
 #else
-__RCSID("$NetBSD: parser.c,v 1.158 2018/12/09 17:33:38 christos Exp $");
+__RCSID("$NetBSD: parser.c,v 1.159 2018/12/11 13:31:20 kre Exp $");
 #endif
 #endif /* not lint */
 
@@ -2447,7 +2447,7 @@ getprompt(void *unused)
  * behaviour.
  */
 static const char *
-expandonstack(char *ps, int lineno)
+expandonstack(char *ps, int cmdsub, int lineno)
 {
 	union node n;
 	struct jmploc jmploc;
@@ -2465,9 +2465,13 @@ expandonstack(char *ps, int lineno)
 		setinputstring(ps, 1, lineno);
 
 		readtoken1(pgetc(), DQSYNTAX, 1);
-		if (backquotelist != NULL && !promptcmds)
-			result = "-o promptcmds not set: ";
-		else {
+		if (backquotelist != NULL) {
+			if (!cmdsub) 
+				result = ps;
+			else if (!promptcmds)
+				result = "-o promptcmds not set: ";
+		}
+		if (result == NULL) {
 			n.narg.type = NARG;
 			n.narg.next = NULL;
 			n.narg.text = wordtext;
@@ -2518,7 +2522,7 @@ expandstr(char *ps, int lineno)
 	 */
 	(void) stalloc(stackblocksize());
 
-	result = expandonstack(ps, lineno);
+	result = expandonstack(ps, 1, lineno);
 
 	if (__predict_true(result == stackblock())) {
 		size_t len = strlen(result) + 1;
@@ -2565,4 +2569,18 @@ expandstr(char *ps, int lineno)
 	popstackmark(&smark);
 
 	return result;
+}
+
+/*
+ * and a simpler version, which does no $( ) expansions, for
+ * use during shell startup when we know we are not parsing,
+ * and so the stack is not in use - we can do what we like,
+ * and do not need to clean up (that's handled externally).
+ *
+ * Simply return the result, even if it is on the stack
+ */
+const char *
+expandenv(char *arg)
+{
+	return expandonstack(arg, 0, 0);
 }
