bin/sh/parser.h
@@ -1,4 +1,4 @@
-/*	$NetBSD: parser.h,v 1.26 2018/12/03 06:40:26 kre Exp $	*/
+/*	$NetBSD: parser.h,v 1.27 2018/12/11 13:31:20 kre Exp $	*/
 
 /*-
  * Copyright (c) 1991, 1993
@@ -77,6 +77,7 @@ int goodname(const char *);
 int isassignment(const char *);
 const char *getprompt(void *);
 const char *expandstr(char *, int);
+const char *expandenv(char *);
 
 struct HereDoc;
 union node;
